--- a/sass/theme/template-parts/home/carousel.scss
+++ b/sass/theme/template-parts/home/carousel.scss
@@ -1,7 +1,7 @@
 body.home {
     background-color: black;
 }
-body.home.logged-in {
+body.logged-in {
     .carousel-wrapper {
         height: $carousel-height-logged-in;
     }
@@ -13,7 +13,7 @@ body.home.logged-in {
         object-fit: cover;
     }
 }
-body.home:not(.logged-in){
+body:not(.logged-in){
     .carousel-wrapper {
         height: $carousel-height;
     }
