--- a/sass/theme/template-parts/pages/careers.scss
+++ b/sass/theme/template-parts/pages/careers.scss
@@ -1,5 +1,17 @@
 .page-template-template-careers {
 
+	.video-wrapper, .row, .container {
+		position:static;
+	}
+
+	.white-bg {
+		min-height: 445px;
+		iframe {
+			width: 100%;
+			height: 100%;
+		}
+	}
+
 	.text-content {
 		@media(min-width:900px) {
 			min-width: 781px;
@@ -10,12 +22,7 @@
 	}
 
 	#primary-carousel {
-		.carousel-item {
-			max-height: 750px;
-		}
-		.carousel-wrapper {
-			height: 750px;
-		}
+
 		.slide-count {
 			text-transform: uppercase;
 		}
@@ -23,6 +30,8 @@
 
 	.videos-wrapper {
 
+		height: 100vh;
+		max-height: 850px;
 
 		background-size: 100vw auto;
 		background-color: black;
@@ -35,21 +44,21 @@
 		.text-wrapper {
 			color: white;
 			text-align: center;
-			padding-top: 120px;
+			padding-top: 100px;
 			padding-bottom: 60px;
 			.title {
 				font-family: $font-family-primary;
 				font-size: 35px;
 				text-transform: uppercase;
 				letter-spacing: 2px;
+				padding-top: 20px;
 			}
 		}
 
 		#video-section {
 
-			background-size: 52vw 100%;
-			background-position: top left;
-			background-repeat: no-repeat;
+			position:relative;
+
 
 
 			min-height: 445px;
@@ -122,6 +131,9 @@
 
 	#jobs-section {
 		background-color: black;
+		> .row {
+			max-width: 99vw;
+		}
 		.text-section {
 			background-image: url(http://localhost/wp-content/uploads/2020/01/job-openings-bg.png);
 			background-size: cover;
@@ -184,6 +196,10 @@
 				}
 			}
 		}
+	}
+
+	.black-section {
+		padding-right: 0;
 	}
 
 }
